# gcg

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  SESSION_TRANSCRIPT.md  clplasma.cpp  clplasma.h  cmake_install.cmake  imgui.ini  imtest  main.cpp  plasmabak.cpp  plasmas.h
